<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HumanRHDapp</string>
    <string name="none">Ninguno</string>
    <string name="selecciona_fecha">Selecciona una fecha</string>
    <string name="selecciona_hora">Selecciona una hora</string>
    <string name="total_dep">Total departamento</string>
    <string name="conceptos">Conceptos</string>
    <string name="selecciona_concepto">Selecciona un concepto</string>
    <string name="sin_conceptos">Sin conceptos</string>
    <string name="supervisor">Supervisor:</string>
    <string name="seleccionar_supervisor">Selecciona un supervisor</string>
    <string name="reporte">Reporte</string>
    <string name="descargas">Descargas</string>
    <string name="descargar_pdf">Descarga PDF</string>
    <string name="pdf_descargado">PDF descargado correctamente</string>
    <string name="error_descargar_PDF">Error al descargar el PDF</string>
    <string name="almacenamiento_interno">Almacenamiento interno</string>
    <string name="seleccionar_motivo">Seleccionar un motivo</string>
    <string name="seleccionar_hora_inicial">Seleccionar una hora inicial</string>
    <string name="seleccionar_hora_final">Seleccionar una hora final</string>
    <string name="ingresar_comentario">Favor de ingresar un comentario</string>
    <string name="sin_info_motivos">Sin informacion de motivos</string>
    <string name="seleccionar_codid">Seleccionar código de identidad</string>
    <string name="codid">Codigo de identidad:</string>
    <string name="empleados_seleccionados">Empleados seleccionados</string>
    <string name="seleccionar_empleados">Seleccionar empleados</string>
    <string name="lista_Empleados">Lista de empleados</string>
    <string name="empleado_seleccionado">Empleado seleccionado</string>
    <string name="seleccion_anio">Selecciona un año</string>
    <string name="hay">Hay</string>
    <string name="empleados_asistencia">de empleados con asistencia</string>
    <string name="asistencia">Asistencia</string>
    <string name="button_refresh">Refrescar</string>
    <string name="todos_anios">Todos los años</string>
    <string name="empleados">Empleados</string>
    <string name="grupo">Grupo : </string>
    <string name="secuencia">Secuencia : </string>
    <string name="fecha_inicio">Fecha inicio : </string>
    <string name="fecha_termino">Fecha termino : </string>
    <string name="dias_tomados">Dias tomados : </string>
    <string name="autorizar">Autorizar</string>
    <string name="registro_tiempos_extras">Registro de tiempos extras</string>
    <string name="negociaciones_horario">Negociaciones de horario</string>
    <string name="lista_solicitdes">Lista de solicitudes</string>
    <string name="hora_inicial">Hora inicial:</string>
    <string name="hora_final">Hora final:</string>
    <string name="minutos_retardos">Minutos retardo</string>
    <string name="horas_permiso">Horas permiso:</string>
    <string name="estatus">Estatus:</string>
    <string name="lista_de_ausentismos">Lista de ausentismos</string>
    <string name="lista_de_permisos">Lista de permisos</string>
    <string name="selecciona_dias">Seleccionar días</string>
    <string name="dia_seleccionado">Día seleccionado</string>
    <string name="dias_seleccionados">Días seleccionados</string>
    <string name="cero_dias_seleccionados">0 días seleccionados</string>
    <string name="concepto_permiso">Concepto permiso:</string>
    <string name="fecha_permiso">Fecha permiso:</string>
    <string name="motivo_descripcion">Motivo descripción</string>
    <string name="minutos_permiso">Minutos retardo:</string>
    <string name="numero_empleado">Numero empleado:</string>
    <string name="motivo_ausentismo">Motivo de ausentismo:</string>
    <string name="editar_permisos">Editar permiso</string>
    <string name="alta_permisos">Alta permisos</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar_solicitud">Actualizar solicitud</string>
    <string name="sin_registros">No Hay Registros disponibles</string>
    <string name="grupos">Grupos:</string>
    <string name="agregar">Agregar</string>
    <string name="incapacidad">Incapacidad</string>
    <string name="sin_registros_ausentismos">No existen registros de Ausentismos</string>
    <string name="sin_registros_permisos">No existen registros de Permisos</string>
    <string name="sin_registros_vacaciones">No existen registros de Vacaciones</string>
    <string name="por_el_momento_ausentismos" tools:ignore="Typos">Por el momento no se cuenta con registros de Ausentismos para este colaborador.</string>
    <string name="por_el_momento_permisos" tools:ignore="Typos">Por el momento no se cuenta con registros de Permisos para este colaborador.</string>
    <string name="por_el_momento_vacaciones" tools:ignore="Typos">Por el momento no se cuenta con registros de Vacaciones para este colaborador.</string>
    <string name="crear_ausentismo">Crear nuevo ausentismo</string>
    <string name="crear_permisos">Crear nuevo permiso</string>
    <string name="agregar_vacaciones">Agregar vacaciones</string>
    <string name="version">Versión:</string>
    <string name="compilación">Compilación:</string>
    <string name="copyright">Copyright ©:</string>
    <string name="venturessoft_corporation">Venturessoft Corporation</string>
    <string name="advertencia">Advertencia:</string>
    <string name="about_us_txt" tools:ignore="Typos">Este programa está protegido por las leyes de derechos de autor y otros tratados internacionales. La reproduccion o distribución licita de este programa, o de cualquier parte del mismo, está penada por la ley con severas sanciones civiles y será objeto de todas las acciones judiciales que correspondan.</string>
    <string name="filtros">Filtros</string>
    <string name="filtrar">Filtrar</string>
    <string name="buscar_estacion">Buscar Estacion</string>
    <string name="acceso">Acceso</string>
    <string name="control_de_tiempos">Control de tiempos</string>
    <string name="control_de_tiempos_acceso">Control de tiempos y acceso</string>
    <string name="human_etime">Human eTime</string>
    <string name="description">description</string>
    <string name="turno_input">Turno:</string>
    <string name="concepto_input">Concepto:</string>
    <string name="categoria_input">Categoria:</string>
    <string name="departamento_input">Departamento:</string>
    <string name="motivo_input">Motivo:</string>
    <string name="vt1">VT1:</string>
    <string name="vt2">VT2:</string>
    <string name="vt3">VT3:</string>
    <string name="vt4">VT4:</string>
    <string name="vt5">VT5:</string>
    <string name="ene">Ene</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="abr">Abr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="ago">Ago</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dic">Dic</string>
    <string name="proceso_maestro_reloj">Proceso: Maestro Reloj</string>
    <string name="nueva">Nueva</string>
    <string name="estaciones">Estaciones</string>
    <string name="por_estructura_departamental">Por estructura departamental</string>
    <string name="aplica_pago_anticipado">Aplica pago anticipado: </string>
    <string name="solicita_pago_de_secuencia">Solicita pago de secuencia: </string>
    <string name="secuencias_programadas">Secuencias programadas</string>
    <string name="saldo_de_vacaciones">Saldo de vacaciones</string>
    <string name="dias_adicionales">Dias adicionales:</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento:</string>
    <string name="rechazar">Rechazar</string>
    <string name="no_existen_registros">No existen registros</string>
    <string name="por_el_momento_no_se_cuenta_con_registros" tools:ignore="Typos">Por el momento no se cuenta con registros para este colaborador.</string>
    <string name="seccion">Sección:</string>
    <string name="hora_inicio_fin">Hora inicio/fin:</string>
    <string name="a_las">a las</string>
    <string name="detalle_del_reporte">Detalle del reporte</string>
    <string name="est_libres_estacion">Estacion : </string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="seleccionar_categoria">Seleccionar una categoria</string>
    <string name="seleccionar_zona">Seleccionar una zona</string>
    <string name="seleccionar_departamento">Seleccionar un departamento</string>
    <string name="registro_estaciones_libres">Registro en estaciones libres</string>
    <string name="detalle_del_registro">Detalle del registro</string>
    <string name="selecciona_filtros">Selecciona los filtros que desees aplicar.</string>
    <string name="todos_los_empleados">Todos los empleados</string>
    <string name="filtrar_por_fecha">Filtrar por fecha</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="faFechaFinal">Fecha final:</string>
    <string name="empleado_al_filtro">Añadir empleado al filtro</string>
    <string name="empleado_a_la_lista">Añadir empleado a la lista</string>
    <string name="selecciona_un_empleado">Selecciona un empleado</string>
    <string name="anadir">Añadir</string>
    <string name="remover_filtros">Remover filtros aplicados</string>
    <string name="rol">Rol:</string>
    <string name="turno">Turno:</string>
    <string name="categoria">Categoria:</string>
    <string name="zona">Zona:</string>
    <string name="marca">Marca</string>
    <string name="menup_1">Control de Ausentismos</string>
    <string name="menup_2">Administración de Tiempos</string>
    <string name="menup_3">Configuracion</string>
    <string name="submenu_1">Salida de vacaciones</string>
    <string name="submenu_2" tools:ignore="Typos">Programacion anual de vacaciones</string>
    <string name="submenu_22">Autorización de vacaciones</string>
    <string name="submenu_3">Ausentismos</string>
    <string name="submenu_4">Permisos</string>
    <string name="submenu_5" tools:ignore="Typos">Kardex anual</string>
    <string name="submenu_6">Kardex mensual</string>
    <string name="submenu_7">Reportes</string>
    <string name="submenu_8">Información general</string>
    <string name="submenu_9">Negociación de horario</string>
    <string name="submenu_10">Entradas y salidas / Autorización concepto</string>
    <string name="submenu_101">Entradas y salidas masivas</string>
    <string name="submenu_11">Preautorización de tiempos extra</string>
    <string name="submenu_12">Reportes.</string>
    <string name="submenu_13">Acerca de Human RHD</string>
    <string name="submenu_14">Cerrar sesion</string>
    <string name="menu_reporte_estaciones_libres">Reportes de estaciones libres</string>
    <string name="rvacacionesca">Periodo</string>
    <string name="vrpcaDepartamento">Departamento</string>
    <string name="vrpcaFormato">Formato de reporte</string>
    <string name="vrpcaRetardos">Retardos</string>
    <string name="vrhcaProgramacion">Programacion</string>
    <string name="vrhcaSalidas">Salidas</string>
    <string name="fpConcepto">Concepto:</string>
    <string name="menuAT_caption">Administración de tiempos</string>
    <string name="hind_anio">Selecciona el año</string>
    <string name="ATFormato_de_Reporte">Formato de Reporte</string>
    <string name="ATImpresion_por_Empleado">Impresion por empleado</string>
    <string name="ATEmpleados_inactivos">Empleados inactivos</string>
    <string name="ATMR_activo">MR activo</string>
    <string name="ATVisualizacion_de_informacion">Visualizacion de informacion</string>
    <string name="ATGeneral">General</string>
    <string name="ATDetalle">Detalle</string>
    <string name="ATTipo_de_reporte_hint">Descripcion por empleado</string>
    <string name="ATAnio">Año:</string>
</resources>