<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menup_1">
        <menu>
            <item
                android:id="@+id/item_1"
                android:icon="@drawable/ic_salida_de_vacaciones"
                android:title="@string/submenu_1" />
           <item
                android:id="@+id/item_2"
                android:icon="@drawable/ic_programacion_anual_de_vacaciones"
                android:title="@string/submenu_2" />
            <item
                android:id="@+id/item_22"
                android:icon="@drawable/ic_programacion_anual_de_vacaciones"
                android:title="@string/submenu_22" />
            <item
                android:id="@+id/item_3"
                android:icon="@drawable/ic_ausentismos"
                android:title="@string/submenu_3" />
            <item
                android:id="@+id/item_4"
                android:icon="@drawable/ic_permisos"
                android:title="@string/submenu_4" />
            <item
                android:id="@+id/item_5"
                android:icon="@drawable/ic_kardex_anual"
                android:title="@string/submenu_5" />
            <item
                android:id="@+id/item_6"
                android:icon="@drawable/ic_kardex_mensual"
                android:title="@string/submenu_6" />
            <item
                android:id="@+id/item_7"
                android:icon="@drawable/ic_reportes"
                android:title="@string/submenu_7" />
            <item
                android:id="@+id/item_23"
                android:icon="@drawable/ic_reportes"
                android:title="@string/menu_reporte_estaciones_libres"/>
            <item
                android:id="@+id/item_24"
                android:icon="@drawable/ic_kardex_mensual"
                android:title="Pruebas"/>
        </menu>
    </item>

    <item android:title="@string/menup_2">
        <menu>
            <item
                android:id="@+id/item_8"
                android:icon="@drawable/ic_informacion_general"
                android:title="@string/submenu_8" />
            <item
                android:id="@+id/item_9"
                android:icon="@drawable/ic_negociacion_de_horarios"
                android:title="@string/submenu_9" />
            <item
                android:id="@+id/item_10"
                android:icon="@drawable/ic_entradas_y_salidas"
                android:title="@string/submenu_10" />
            <item
                android:id="@+id/item_101"
                android:icon="@drawable/ic_entradas_y_salidas"
                android:title="@string/submenu_101" />
            <item
                android:id="@+id/item_11"
                android:icon="@drawable/ic_pre_autorizacion_de_tiempos_extra"
                android:title="@string/submenu_11" />
            <item
                android:id="@+id/item_12"
                android:icon="@drawable/ic_reportes"
                android:title="@string/submenu_12" />
        </menu>
    </item>

    <item android:title="@string/menup_3">
        <menu>
            <item
                android:id="@+id/item_13"
                android:icon="@drawable/ic_acerca_de"
                android:title="@string/submenu_13" />
            <item
                android:id="@+id/item_14"
                android:icon="@drawable/ic_cerrar_sesion"
                android:title="@string/submenu_14" />
        </menu>
    </item>
</menu>